crates/panels/re_blueprint_tree/tests/integration/snapshots/view_structure_test/query-t/empty.snap
---
source: crates/panels/re_blueprint_tree/tests/integration/view_structure_test.rs
expression: blueprint_tree_data
---
root_container: ~
