crates/panels/re_blueprint_tree/tests/integration/snapshots/view_structure_test/query-t/unknown_origin.snap
---
source: crates/panels/re_blueprint_tree/tests/integration/view_structure_test.rs
expression: blueprint_tree_data
---
root_container:
  name:
    Placeholder: Grid container
  kind: Grid
  visible: true
  default_open: true
  children:
    - View:
        class_identifier: 3D
        name:
          Placeholder: wrong/path
        visible: true
        default_open: true
        origin_tree:
          kind: EmptyOriginPlaceholder
          entity_path:
            - wrong
            - path
          visible: false
          label: path
          highlight_sections:
            - start: 2
              end: 3
          default_open: false
          children: []
        projection_trees: []
